# rfl_eigen_serdes

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build_all.bat  test_all.bat  vcpkg-configuration.json  vcpkg.json
cmake/: rfl_eigen_serdesConfig.cmake.in
include/: rfl_eigen_serdes.hpp
sample/: sample.cpp
test/: test_serdes.cpp
